--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
         app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
 
     <TextView
-        android:id="@+id/likesCountTextView"
+        android:id="@+id/likesTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/half_common_spacing"
@@ -119,7 +119,7 @@
         android:layout_marginTop="@dimen/common_spacing"
         android:background="@android:color/transparent"
         android:contentDescription="@string/description_post_share"
-        app:layout_constraintStart_toEndOf="@id/likesCountTextView"
+        app:layout_constraintStart_toEndOf="@id/likesTextView"
         app:layout_constraintTop_toTopOf="@id/footerBarrier"
         app:srcCompat="@drawable/ic_baseline_share_24" />
 
